half implemented crn pick endpoint
