# docs/swagger.json
@@ -62,6 +62,51 @@
                 "responses": {}
             }
         },
+        "/beePicker/pick": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "BeePicker"
+                ],
+                "summary": "Picks a course from the kepler.",
+                "parameters": [
+                    {
+                        "description": "Request body containing the course codes",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/beepicker.pickRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Picking successful",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/beePicker/schedule": {
             "get": {
                 "produces": [
@@ -91,7 +136,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/beepicker.ScheduleSaveRequest"
+                            "$ref": "#/definitions/beepicker.scheduleSaveRequest"
                         }
                     }
                 ],
@@ -116,29 +161,6 @@
                     }
                 }
             }
-        },
-        "/hello": {
-            "get": {
-                "description": "Hello World",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Hello"
-                ],
-                "summary": "Hello World",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.MessageResponse"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -157,7 +179,18 @@
                 }
             }
         },
-        "beepicker.ScheduleSaveRequest": {
+        "beepicker.pickRequest": {
+            "type": "object",
+            "properties": {
+                "courseCodes": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "beepicker.scheduleSaveRequest": {
             "type": "object",
             "properties": {
                 "ECRN": {
@@ -173,14 +206,6 @@
                     }
                 },
                 "scheduleName": {
-                    "type": "string"
-                }
-            }
-        },
-        "main.MessageResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
                     "type": "string"
                 }
             }
